[package]
name = "cactus_evaluator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cactus_evaluator"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }

[profile.dev]
overflow-checks = false